setting mongo helm hook to -2

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,16 +3,16 @@ entries:
   mongo:
   - apiVersion: v2
     appVersion: 0.0.1
-    created: "2022-08-11T03:44:18.951075+05:30"
+    created: "2022-08-11T10:25:59.080814-04:00"
     dependencies:
     - name: harness-common
       repository: https://harness.github.io/helm-common/charts
       version: 0.1.0
     description: A Helm chart for Kubernetes
-    digest: f3939f0000acfee83ca9c29d2fe84d7a4907ce2e676fe971e5b3fa7dfb9745ff
+    digest: 7c6afcb4a333200f34aba9c069e9946a9fe8205763e44569aec37b3d13d13fac
     name: mongo
     type: application
     urls:
     - mongo-0.1.0.tgz
     version: 0.1.0
-generated: "2022-08-11T03:44:18.949251+05:30"
+generated: "2022-08-11T10:25:59.079065-04:00"
