--- a/src/templates/configmaps.yaml
+++ b/src/templates/configmaps.yaml
@@ -4,7 +4,10 @@ metadata:
   labels:
     app: mongodb-replicaset
   name: mongodb-replicaset-chart-mongodb
-  namespace: {{ .Release.Namespace }} 
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-2" 
 data:
   mongod.conf: | 
 {{- if .Values.global.mongoSSL }}
@@ -29,6 +32,9 @@ metadata:
     app: mongodb-replicaset
   name: mongodb-replicaset-chart-init
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-2"
 data:
   on-start.sh: |
     #!/usr/bin/env bash
