--- a/src/templates/secrets.yaml
+++ b/src/templates/secrets.yaml
@@ -5,6 +5,9 @@ metadata:
     app: mongodb-replicaset
   name: mongodb-replicaset-chart-keyfile
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-2"
 type: Opaque
 data:
   key.txt: b0x0dVV4dmN6VmJ3a2ViRnRoT0E=
@@ -19,6 +22,8 @@ metadata:
   name: mongodb-replicaset-ssl-cert
   namespace: {{ .Release.Namespace }}
   annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-2"
 type: Opaque
 data:
   {{- with .Values.secrets }}
