--- a/src/templates/service.yaml
+++ b/src/templates/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-2"
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
   labels:
     app: mongodb-replicaset
