--- a/src/templates/statefulset.yaml
+++ b/src/templates/statefulset.yaml
@@ -6,6 +6,9 @@ metadata:
     app: mongodb-replicaset
   name: mongodb-replicaset-chart
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-2"
 spec:
   selector:
     matchLabels:
