--- a/src/templates/secrets.yaml
+++ b/src/templates/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
   name: mongodb-replicaset-chart-keyfile
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-2"
 type: Opaque
 data:
@@ -22,7 +22,7 @@ metadata:
   name: mongodb-replicaset-ssl-cert
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-2"
 type: Opaque
 data:
