--- a/src/templates/service.yaml
+++ b/src/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-2"
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
   labels:
