--- a/src/templates/statefulset.yaml
+++ b/src/templates/statefulset.yaml
@@ -7,7 +7,7 @@ metadata:
   name: mongodb-replicaset-chart
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-2"
 spec:
   selector:
