--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,16 +3,16 @@ entries:
   mongo:
   - apiVersion: v2
     appVersion: 0.0.1
-    created: "2022-08-11T11:25:25.887068-04:00"
+    created: "2022-08-14T20:41:48.125966+05:30"
     dependencies:
     - name: harness-common
       repository: https://harness.github.io/helm-common/charts
-      version: 0.1.0
+      version: 0.1.1
     description: A Helm chart for Kubernetes
-    digest: 990b3f9b5d41aa868299fbbe60fac55e2ff8c4c0b40cccace193075d81f186fb
+    digest: c5d0d3357e5d89f44e669a97c4ffbdac1a6675baab8e8167c2c8cb7e9403ba0e
     name: mongo
     type: application
     urls:
     - mongo-0.1.0.tgz
     version: 0.1.0
-generated: "2022-08-11T11:25:25.884375-04:00"
+generated: "2022-08-14T20:41:48.124592+05:30"
