--- a/src/mongo/templates/secrets.yaml
+++ b/src/mongo/templates/secrets.yaml
@@ -5,9 +5,7 @@ metadata:
     app: mongodb-replicaset
   name: mongodb-replicaset-chart-keyfile
   namespace: {{ .Release.Namespace }}
-  annotations:
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-2"
+  annotations: {}
 type: Opaque
 data:
   key.txt: b0x0dVV4dmN6VmJ3a2ViRnRoT0E=
@@ -21,9 +19,7 @@ metadata:
     app: mongodb-replicaset
   name: mongodb-replicaset-ssl-cert
   namespace: {{ .Release.Namespace }}
-  annotations:
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-2"
+  annotations: {}
 type: Opaque
 data:
   {{- with .Values.secrets }}
