--- a/src/mongo/values.yaml
+++ b/src/mongo/values.yaml
@@ -41,6 +41,14 @@ initContainers:
       repository: harness/mongo
       digest: ""
 
+mongoSecrets:
+  adminUser:
+    name: harness-secrets
+    key: mongodbUsername
+  adminPassword:
+    name: harness-secrets
+    key: mongodbPassword
+
 labels: ""
 
 annotations: ""
